<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="12"
        android:title=""
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_sort_movie"
        android:orderInCategory="14"
        android:title="@string/sort_by"
        app:showAsAction="never" >
        <menu>
            <group android:id="@+id/action_sort_by"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_by_popularity"
                    android:orderInCategory="17"
                    android:title="@string/sort_by_popularity" />

                <item
                    android:id="@+id/action_sort_by_rating"
                    android:orderInCategory="18"
                    android:title="@string/sort_by_highest_rating" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_change_theme"
        android:checkableBehavior="single"
        android:orderInCategory="20"
        android:title="@string/change_theme"
        app:showAsAction="never">
        <menu>
            <group
                android:id="@+id/action_change_theme_group"
                android:checkableBehavior="single" android:orderInCategory="4">
                <item
                    android:id="@+id/action_light_theme"
                    android:orderInCategory="21"
                    android:title="@string/light_theme" />

                <item
                    android:id="@+id/action_dark_theme"
                    android:orderInCategory="22"
                    android:title="@string/dark_theme" />
            </group>
        </menu>
    </item>

</menu>