<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/cast_crew_detail_nested"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAppBackgroundDark">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/cast_crew_details_toolbar"
                layout="@layout/item_cast_crew_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.41" />

            <TextView
                android:id="@+id/cast_crew_name"
                style="@style/MovieDetailTextViewSubHeaderLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:text="@string/cast_crew_name_label"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cast_crew_details_toolbar" />

            <TextView
                android:id="@+id/cast_crew_name_tv"
                style="@style/MovieDetailTextViewDataStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/cast_crew_name"
                tools:text="Jasper" />

            <TextView
                android:id="@+id/cast_crew_gender_label"
                style="@style/MovieDetailTextViewSubHeaderLabel"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@string/cast_crew_gender_label"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cast_crew_name" />

            <TextView
                android:id="@+id/cast_crew_gender_tv"
                style="@style/MovieDetailTextViewDataStyle"
                android:layout_height="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/cast_crew_gender_label"
                tools:text="Male" />

            <TextView
                android:id="@+id/cast_character_label"
                style="@style/MovieDetailTextViewSubHeaderLabel"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@string/cast_character_label"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cast_crew_gender_label" />

            <TextView
                android:id="@+id/cast_character_tv"
                style="@style/MovieDetailTextViewDataStyle"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/cast_character_label"
                tools:text="Ethan Hunt" />

            <TextView
                android:id="@+id/crew_department_label"
                style="@style/MovieDetailTextViewSubHeaderLabel"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@string/crew_department_label"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cast_character_label" />

            <TextView
                android:id="@+id/crew_department_tv"
                style="@style/MovieDetailTextViewDataStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/crew_department_label"
                tools:text="Production" />

            <TextView
                android:id="@+id/crew_job_label"
                style="@style/MovieDetailTextViewSubHeaderLabel"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@string/crew_job_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crew_department_label" />

            <TextView
                android:id="@+id/crew_job_tv"
                style="@style/MovieDetailTextViewDataStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/crew_job_label"
                tools:text="Producer" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>
</layout>